--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,25 @@
+Changes in version 1.3.1 
+----------------------------------------------------------------
+
+CODE
+
+    *`subjectReport` bug removed over axis.text.x duplicated   
+    parameter.
+
+Changes in version 1.3.0 
+----------------------------------------------------------------
+
+VERSION
+
+    * Bump version after creating 3.5 devel branch 
+
+Changes in version 1.2.0 
+----------------------------------------------------------------
+
+VERSION
+
+    * Bump version after creating 3.4 release branch 
+
 Changes in version 1.1.1 
 ----------------------------------------------------------------
 
