Bug fixed in subjectReport, axis.text.x parameter duplicate removed
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_3_4/madman/Rpacks/pbcmc@124399 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,19 @@
+Changes in version 1.2.1 
+----------------------------------------------------------------
+
+CODE
+
+    *`subjectReport` bug removed over axis.text.x duplicated   
+    parameter.
+
+
+Changes in version 1.2.0 
+----------------------------------------------------------------
+
+VERSION
+
+    * Bump version after creating 3.4 release branch 
+    
 Changes in version 1.1.1 
 ----------------------------------------------------------------
 
