Bug fixed in test_subjectReport function
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_3_4/madman/Rpacks/pbcmc@124567 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Changes in version 1.2.2 
+----------------------------------------------------------------
+
+CODE
+
+    *`test_subjectReport` update after subjectReport modification.
+    
 Changes in version 1.2.1 
 ----------------------------------------------------------------
 
