--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+Changes in version 1.3.2 
+----------------------------------------------------------------
+
+CODE
+
+    *`test_subjectReport` update after subjectReport modification.
+    
+DEPENDENCIES
+
+    *R (>= 3.4) was updated.
+
 Changes in version 1.3.1 
 ----------------------------------------------------------------
 
